--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "react": "^17.0.2",
     "react-axios": "^2.0.6",
     "react-bootstrap": "^2.7.2",
+    "react-modal": "^3.16.1",
+    "mdb-react-ui-kit": "^5.1.0",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
