--- a/package.json
+++ b/package.json
@@ -1,21 +1,24 @@
 {
-  "name": "myapp",
+  "name": "mernweb",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://127.0.0.1:9090/",
+  "proxy": "http://localhost:9090/",
   "dependencies": {
-    "@fortawesome/fontawesome-free": "^6.3.0",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^11.2.7",
+    "@testing-library/user-event": "^12.8.3",
     "axios": "^1.3.4",
-    "jwt-decode": "^3.1.2",
-    "mdb-react-ui-kit": "^5.1.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "bootstrap": "^5.2.3",
+    "font-awesome": "^4.7.0",
+    "react": "^17.0.2",
+    "react-axios": "^2.0.6",
+    "react-bootstrap": "^2.7.2",
     "react-modal": "^3.16.1",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "mdb-react-ui-kit": "^5.1.0",
+    "react-dom": "^17.0.2",
+    "react-router-dom": "^5.3.0",
+    "react-scripts": "4.0.3",
+    "web-vitals": "^1.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
