--- a/server/package.json
+++ b/server/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "server",
+  "name": "bookynode",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
+  "main": "server",
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -12,17 +12,29 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "axios": "^1.3.4",
+    "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "express-validator": "^6.15.0",
-    "jwt-decode": "^3.1.2",
-    "mongodb": "^5.1.0",
-    "mongoose": "^6.10.0",
+    "express-session": "^1.17.3",
+    "express-validator": "^6.14.2",
+    "jsonwebtoken": "^8.5.1",
+    "lowdb": "^5.0.5",
+    "moment": "^2.29.4",
+    "mongodb": "^4.11.0",
+    "mongoose": "^6.7.2",
+    "mongoose-date-format": "^1.2.0",
     "morgan": "^1.10.0",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "nanoid": "^4.0.0",
+    "node-fetch": "^3.3.0",
+    "nodemailer": "^6.9.1",
+    "otp-generator": "^4.0.0",
+    "passport": "^0.6.0",
+    "sharp": "^0.31.2",
+    "swagger-jsdoc": "^6.2.7",
+    "swagger-ui-express": "^4.6.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
