--- a/package.json
+++ b/package.json
@@ -17,6 +17,34 @@
     "react-switch": "^7.0.0",
     "use-local-storage": "^2.3.6",
     "web-vitals": "^1.1.2"
+    "@fortawesome/free-solid-svg-icons": "^6.3.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
+    "@material-ui/core": "^4.12.4",
+    "@material-ui/icons": "^4.11.3",
+    "@octokit/core": "^4.2.0",
+    "@octokit/rest": "^19.0.7",
+    "adm-zip": "^0.5.10",
+    "antd": "^5.3.0",
+    "child_process": "^1.0.2",
+    "history": "^5.3.0",
+    "jszip": "^3.10.1",
+    "mdb-react-ui-kit": "^5.1.0",
+    "octokit": "^2.0.14",
+    "react-axios": "^2.0.6",
+    "react-bootstrap": "^2.7.2",
+    "react-bootstrap-range-slider": "^3.0.8",
+    "react-circular-progressbar": "^2.1.0",
+    "react-modal": "^3.16.1",
+    "react-slick": "^0.29.0",
+    "react-terminal-component": "^1.5.0",
+    "simple-git": "^3.16.1",
+    "socket.io-client": "^4.6.1",
+    "webpack": "^4.46.0",
+    "websocket": "^1.0.34",
+    "xterm": "^5.1.0",
+    "xterm-addon-attach": "^0.8.0",
+    "xterm-addon-fit": "^0.7.0",
+    "xterm-for-react": "^1.0.4"
   },
   "scripts": {
     "start": "react-scripts start",
