--- a/package.json
+++ b/package.json
@@ -4,27 +4,39 @@
   "private": true,
   "proxy": "http://localhost:9090/",
   "dependencies": {
+    "@stripe/react-stripe-js": "^2.1.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
-    "axios": "^1.3.4",
-    "bootstrap": "^5.2.3",
+    "axios": "^1.3.5",
+    "bootstrap": "^5.1.3",
     "font-awesome": "^4.7.0",
+    "i18next": "^22.4.13",
+    "i18next-browser-languagedetector": "^7.0.1",
+    "i18next-http-backend": "^2.2.0",
+    "i18next-xhr-backend": "^3.2.2",
+    "mixpanel-browser": "^2.46.0",
     "react": "^17.0.2",
-    "react-axios": "^2.0.6",
     "react-bootstrap": "^2.7.2",
-    "react-modal": "^3.16.1",
-    "mdb-react-ui-kit": "^5.1.0",
     "react-dom": "^17.0.2",
+    "react-i18next": "^12.2.0",
+    "react-icons": "^4.8.0",
+    "react-modal": "^3.16.1",
+    "react-redux": "^8.0.5",
     "react-router-dom": "^5.3.0",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^5.0.1",
+    "react-switch": "^7.0.0",
+    "reactstrap": "^9.1.8",
+    "styled-components": "^5.3.9",
+    "use-local-storage": "^2.3.6",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "dev": "nodemon server.js"
   },
   "eslintConfig": {
     "extends": [
